fixed overflow y on Matter JS canvas, handleResize fix

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
 html, body {
-  /* position: fixed; */
   top: 0;
   left: 0;
   margin: 0;
@@ -7,6 +6,14 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: 'ABCMonumentGrotesk', sans-serif;
+
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera to avoid overflow in Matter JS canvas */
+body::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 p, h1 {
